[package]
name = "investment-fund"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.18.4"
borsh = "0.10"
borsh-derive = "0.10"
spl-token = { version = "=3.5.0", features = ["no-entrypoint"]}
spl-token-2022 = { version = "=0.9.0", features = ["no-entrypoint"]}
spl-token-metadata-interface = "0.2.0"
thiserror = "1.0"
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"]}
mpl-token-metadata = "3.1.0"
hex = "0.4"
solana-security-txt = {version = "1.1.1"}
